# replayproxy

./: AGENTS.md  Cargo.toml  README.md  RELEASE_POLICY.md  RELEASING.md  SPEC.md
.beads/: README.md  issues.jsonl  metadata.json
.github/release-notes/: README.md
.github/scripts/: generate-release-notes.sh
.github/workflows/: ci.yml  live-api-validation.yml  release-validate.yml  release.yml
artifacts/hardening/20260226T131442Z-portability-failure-modes/: summary.md
artifacts/hardening/20260226T135138Z-tls-connectivity-chaos/: summary.md
artifacts/hardening/20260226T142003Z-dns-dualstack-mitm-edges/: summary.md
docs/: live-api-validation.md  performance.md  session-export-format.md
examples/: replayproxy.grpc.toml  replayproxy.llm-redacted.toml  replayproxy.minimal.toml  replayproxy.websocket.toml
examples/protos/: inference.proto
examples/scripts/: llm_on_request.lua  llm_on_response.lua
presets/: anthropic.toml  openai.toml
scripts/: autocodex-closeout.sh
src/: ca.rs  config.rs  legacy_redaction.rs  lib.rs  logging.rs  main.rs  matching.rs  proxy.rs  scripting.rs  session.rs  session_export.rs  session_import.rs  storage.rs
tests/: config_discovery.rs  config_examples.rs  live_api_validation.rs  performance_harness.rs  preset_import.rs  reverse_proxy.rs
