[package]
name = "replayproxy"
version = "0.1.0"
edition = "2024"

[features]
default = ["watch"]
grpc = ["dep:prost", "dep:prost-reflect"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
scripting = ["dep:mlua"]
tls = []
watch = ["dep:notify"]
websocket = ["dep:tokio-tungstenite"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2", "server"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "native-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "server-auto", "tokio"] }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", optional = true }
mlua = { version = "0.11", default-features = false, features = ["luau", "vendored"], optional = true }
notify = { version = "8", optional = true }
prost = { version = "0.14", optional = true }
prost-reflect = { version = "0.16", optional = true, features = ["serde"] }
protox = "0.9"
rcgen = { version = "0.14", features = ["x509-parser"] }
regex = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_json_path = "0.7"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect"], optional = true }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
x509-parser = "0.18"

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "handshake"] }
